* Added a Rackspace monitoring page * Fixed template loading with Firefox.

--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,6 @@
 
     <div id="navbar" class="navbar navbar-inverse navbar-fixed-top"></div>
 
-
     <div class="container-fluid">
       <div class="row-fluid">
 	<div class="span2">
@@ -44,13 +43,12 @@
 	  <br/>
 	  <footer class="footer">
             <p>&copy; Open Source: <a href="http://opensource.org/licenses/MIT">MIT License</a></p>
-
 	  </footer>
 	</div>
       </div>
     </div>
     
-    <div class="client-side-include" src="js/templates.html"></div>
+    <div id="templates" class="client-side-include" src="js/templates.html"></div>
 
     <!-- Javascript
     ================================================== -->
@@ -62,11 +60,14 @@
     <script type="text/javascript" src="lib/d3.v3/d3.v3.min.js"></script>
     <script type="text/javascript" src="lib/nv.d3/nv.d3.min.js"></script>
     <script type="text/javascript" src="lib/nv.d3/stream_layers.js"></script>
+    <script type="text/javascript" src="lib/sprintf/sprintf-0.6.js"></script>
 
     <script type="text/javascript" src="cordova.js"></script>
-    <script src="js/utils.js"></script>
     <script src="js/models.js"></script>
+    <script src="js/rax.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/views.js"></script>
     <script src="js/main.js"></script>
+
   </body>
 </html>
