--- a/www/js/templates.html
+++ b/www/js/templates.html
@@ -181,7 +181,7 @@
   
   <div class="container-fluid">
     
-    <div class="row-fluid">
+    <div id="signin_row" class="row-fluid">
       <div class="span12">
 	<form id="signin" class="form-signin">
 	  <h2 class="form-signin-heading">Please sign in with your Rackspace Credentials</h2>
@@ -195,7 +195,7 @@
       </div>
     </div>
     
-    <div class="row-fluid">
+    <div id="metric_row" class="row-fluid" style="display:none">
       <div class="span12">
 	<div>Select an "Entity -> Check -> Metric" combination to graph</div>
 	<select id="metricList" style="width:100%"></select>
